fix styling on popups on mobile screen sizes

--- a/src/styles/ComposePostForm.css
+++ b/src/styles/ComposePostForm.css
@@ -67,7 +67,7 @@
   padding: 0 16px;
   display: flex;
   flex-direction: column;
-  overflow: auto;
+  overflow: overlay;
 }
 
 .ComposePostForm form .author-bar {
