--- a/src/styles/SignUpForm.css
+++ b/src/styles/SignUpForm.css
@@ -15,7 +15,7 @@
 
 .SignUpForm form {
   width: 432px;
-  min-height: 100px;
+  max-height: 100%;
   background-color: white;
   border-radius: 8px;
   box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.15);
@@ -23,6 +23,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  overflow: overlay;
 }
 
 .SignUpForm form > * {
